<resources>
    <string name="app_name">Sopt30</string>
    <string name="home_name">이름 : 심채영</string>
    <string name="home_age">나이 : 23</string>
    <string name="home_mbti">MBTI : ENTP</string>
    <string name="signup">회원가입</string>
    <string name="signup_name">이름</string>
    <string name="signup_name_msg">이름을 입력하세요</string>
    <string name="signup_id">깃허브 아이디</string>
    <string name="signup_id_msg">아이디를 입력하세요</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_pw_msg">비밀번호를 입력하세요</string>
    <string name="signup_save">회원가입 완료</string>
    <string name="signin_sopt">SOPT</string>
    <string name="signin_id">아이디</string>
    <string name="signin_id_msg">아이디를 입력하세요</string>
    <string name="signin_pw">비밀번호</string>
    <string name="signin_pw_msg">비밀번호를 입력하세요</string>
    <string name="signin_login">로그인</string>
    <string name="signin_signup">회원가입 하기</string>
    <string-array name = "tab_label">
        <item>팔로잉</item>
        <item>팔로워</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>